<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical" >  
    	<RelativeLayout
    	    android:id="@+id/view_slot"
    	    android:layout_width="match_parent"
		    android:layout_height="0dip"
		    android:layout_weight=".97">
	   	    <edu.upenn.cis350.Trace2Learn.SquareLayout
		        android:id="@+id/character_view_slot"
		        xmlns:android="http://schemas.android.com/apk/res/android"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
		        android:orientation="vertical" />
   	    </RelativeLayout>
	    
    	
    	
	    <TextView
	        android:id="@+id/tag_list"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:text="@string/tag"/>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
		    <Button
		        android:id="@+id/create_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="onCreateButtonClick"
		        android:text="@string/edit" />
		    
		    <Button
		        android:id="@+id/save_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="onSaveButtonClick"
		        android:text="@string/save" />
		    
			<Button
		        android:id="@+id/trace_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="onTraceButtonClick"
		        android:text="@string/practice" />
			
			<Button
			    android:id="@+id/animate_button"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:onClick="onAnimateButtonClick"
			    android:text="@string/animate"/>
			
			<Button
			    android:id="@+id/clear_button"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:onClick="onClearButtonClick"
			    android:text="@string/clear"/>
			
	    </LinearLayout>

</LinearLayout>