<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_tag" />
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_char" />
     
     <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

         <EditText android:id="@+id/search_char"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" />
        
        <Button android:id="@+id/search_char_button"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCharSearchButtonClick"/>
        
    </LinearLayout>
    
     <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_tag" />
     
     <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

         <EditText android:id="@+id/search_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" />
        
        <Button android:id="@+id/search_tag_button"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTagSearchButtonClick"/>
        
    </LinearLayout>
    
     <TextView android:id="@+id/results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results"/>
        
         <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/submit"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSubmitButtonClick"/>
        
        <Button android:id="@+id/back"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTagSearchButtonClick"/>
        
    </LinearLayout>
        
</LinearLayout>