<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_tag" />
        
        <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character" />
        
         <EditText android:id="@+id/character"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" />
        
        <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag" />
        
         <EditText android:id="@+id/tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" />
        

            
                 <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/submit"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSubmitButtonClick"/>
        
        <Button android:id="@+id/back"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTagSearchButtonClick"/>
        
    </LinearLayout>
            
</LinearLayout>