<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom" >

    <TextView
        android:id="@+id/phraseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/trace_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTraceButtonClick"
            android:text="@string/practice" />

        <Button
            android:id="@+id/animate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAnimateButtonClick"
            android:text="@string/animate" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClearButtonClick"
            android:text="@string/clear" />
    </LinearLayout>

    <Gallery
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phraseTitle" />

    <TextView
        android:id="@+id/tag_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout1"
        android:layout_centerHorizontal="true"
        android:text="@string/tag" />

    <ViewAnimator
        android:id="@+id/view_slot"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_above="@+id/tag_list"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gallery" >

        <edu.upenn.cis350.Trace2Learn.SquareLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/character_view_slot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </edu.upenn.cis350.Trace2Learn.SquareLayout>
    </ViewAnimator>

</RelativeLayout>